# Firmus

./: Cargo.toml
firmus/: Cargo.toml  test_reciever
firmus/src/: main.rs
firmus_daemon/: Cargo.toml
firmus_daemon/src/: dash_connection.rs  dashboard.rs  firmus_daemon.rs  main.rs  parent.rs  process.rs  stream_wrapper.rs
firmus_lib/: Cargo.toml
firmus_lib/src/: communication.rs  config.rs  lib.rs
firmus_lib/src/communication/: base.rs  instructor.rs  stream_wrapper.rs
firmus_metrics/: Cargo.toml
firmus_metrics/src/: communication.rs  lib.rs  metrics.rs
test_applicaton/: Cargo.toml
test_applicaton/src/: main.rs
