[package]
name = "firmus_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
ipmpsc = "0.5.1"
tokio = {version="1.21.2",features=["full","process"]}
thiserror = "1.0.37"
serde_json = "1.0.86"
firmus_lib = {path="./../firmus_lib"}