[package]
name = "firmus_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
thiserror = "1.0.37"
serde_json = "1.0.86"
firmus_lib = {path="./../firmus_lib"}
arc-swap = "1.5.1"
bincode = "1.3.3"
serde = {version="1.0.145",features = ["derive"]}